4/kubernetes/manifest.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-app

---
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: dordavidisrael/hw4:app-1.0.0
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: todo-storage
          mountPath: /tmp
      volumes:
      - name: todo-storage
        persistentVolumeClaim:
          claimName: todo-pvc

---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: 5000
